fixed semicolon error

--- a/challenge3.html
+++ b/challenge3.html
@@ -20,7 +20,7 @@
       var addrError = document.getElementById("addressError");
       var validName = false;
       var validAddr = false;
-      if (!document.getElementById("name").value);
+      if (!document.getElementById("name").value)
       {
         nameError.style.display="block";
       }
@@ -28,7 +28,7 @@
         validName = true;
         nameError.style.display="none";
       }
-      if (!document.getElementById("addr").value);
+      if (!document.getElementById("addr").value)
       {
         addrError.style.display="block";
       }
