--- a/challenge4.html
+++ b/challenge4.html
@@ -84,7 +84,9 @@
             alt = "two cats on a roof" 
             src = "https://66.media.tumblr.com/d25bfa4bbbcbef1f1dbdf9f93cbf109e/tumblr_pgegrm0lsD1rcn9rk_500.jpg" 
             onmouseover = "upDate(this)" 
-            onmouseleave = "unDo()";>
+            onmouseleave = "unDo()"
+            onfocus="upDate(this)"
+            onblur="unDo()">
 
 
         <!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->  
@@ -92,33 +94,43 @@
             alt = "two weasels in the sun" 
             src = "https://66.media.tumblr.com/03bcef18ebbb9e30a947afcad3210c23/tumblr_pczqleJ5pr1ro4v2no1_500.jpg"
             onmouseover = "upDate(this)" 
-            onmouseleave = "unDo()";>
+            onmouseleave = "unDo()"
+            onfocus="upDate(this)"
+            onblur="unDo()">
     
         <!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
-        <img class = "preview" tabindex = "1" 
+        <img class = "preview"
             src = "https://66.media.tumblr.com/80d803777f13b392c66768d1f8a19a51/tumblr_pg1xxsSNFT1vnoon8o1_500.jpg" 
             alt = "shadow of two cats in a window"
             onmouseover = "upDate(this)" 
-            onmouseleave = "unDo()";>
+            onmouseleave = "unDo()"
+            onfocus="upDate(this)"
+            onblur="unDo()">
 
 
-        <img class = "preview" tabindex = "1" 
+        <img class = "preview"
             src = "https://66.media.tumblr.com/048944bd52e2206423c2dfacf04fc11e/tumblr_pdlj5zsZA31udmrgco1_500.jpg" 
             alt = "two cats looking into a shop window"
             onmouseover = "upDate(this)" 
-            onmouseleave = "unDo()";>
+            onmouseleave = "unDo()"            
+            onfocus="upDate(this)"
+            onblur="unDo()">
 
-        <img class = "preview" tabindex = "1" 
+        <img class = "preview"
             src = "https://66.media.tumblr.com/60003a38dd69618b5dcb8dcdb9196d46/tumblr_nn9y9uwvRf1qixslso1_500.jpg" 
             alt = "reluctant dogs on leashes"
             onmouseover = "upDate(this)" 
-            onmouseleave = "unDo()";>
+            onmouseleave = "unDo()"
+            onfocus="upDate(this)"
+            onblur="unDo()">
 
-        <img class = "preview" tabindex = "1" 
+        <img class = "preview"
             src = "https://66.media.tumblr.com/4b73a5900c063b2a8efb6dd31b7da99e/tumblr_pa1b57aMVh1wnxhxwo1_500.jpg" 
             alt = "one shiba inu perched on top of another"
             onmouseover = "upDate(this)" 
-            onmouseleave = "unDo()";>
+            onmouseleave = "unDo()"
+            onfocus="upDate(this)"
+            onblur="unDo()">
 </body>
 </html>
     
